Add first PricingCards

--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
   <body>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-md-6">Hello</div>
-        <div class="col-md-6">Hello</div>
+        <div class="col-md-6">
+          <!-- col1-card -->
+          <div class="card rounded-4 border-0 mb-5 shadow-lg">
+            <div class="card-body">
+                <div class="fw-blod"><h4>Free</h4></div>
+                <div class="text-muted">For Freelancers</div>
+                <div class="fs-1 fw-bolded mt-4 mb-5"><h2>$0</h2></div>
+                <ul class="list-group mb-5 fs-5 list-group-flush">
+                  <li class="list-group-item border-0"><i class="bi bi-check2"></i>Single User</li>
+                  <li class="list-group-item border-0"><i class="bi bi-check2"></i>10 Downloads per Month</li>
+                  <li class="list-group-item border-0"><i class="bi bi-check2"></i>Faster Files</li>
+                  <li class="list-group-item border-0"><i class="bi bi-check2"></i>25 Custom Packs</li>
+                </ul>
+                <div class="vstack gap-2"><a class="btn btn-dark rounded-4 mt- mb-4">Subscribe</a></div>
+              
+            </div>
+          </div>
+        </div>
 
+
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">Col-1</div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
